# hospital-financial-intelligence

./: .env.example  .gitignore  ENHANCED_MODELING_RESULTS.md  GROQ_INTEGRATION_SUCCESS.md  HADR_DATA_STRUCTURE.md  HOSPITAL_NAME_MAPPING_README.md  LLM_INTEGRATION_GUIDE.md  README.md  action_plan_feature_fixes.md  enhanced_time_series_features.py  evaluate_model.py  fix_column_mapping.py  groq_hospital_analysis.py  hospital_name_lookup.py  hospital_name_mapping.json  hospital_osph_id_mapping.json  main.py  pyproject.toml  pyproject_deployment.toml  quick_enhanced_evaluation.py  rename_data_files.py  run_eda.py  run_enhanced_feature_engineering.py  run_enhanced_modeling.py  run_feature_engineering.py  run_modeling.py  streamline_data.py  streamlit_dashboard.py  streamlit_dashboard_modern.py
notebooks/: 01_eda_and_feature_engineering.ipynb
reports/: analysis_results.json  demo_analysis_20250627_155149.json  demo_analysis_20250627_155931.json  demo_summary_20250627_155149.md  enhanced_feature_engineering_report.md  executive_summary_2002_20250626.json  executive_summary_2002_20250627.json  executive_summary_2003_20250626.json  executive_summary_2003_20250627.json  executive_summary_2004_20250626.json  executive_summary_2004_20250627.json  executive_summary_2005_20250626.json  executive_summary_2005_20250627.json  executive_summary_2006_20250626.json  executive_summary_2006_20250627.json  executive_summary_2007_20250626.json  executive_summary_2007_20250627.json  executive_summary_2008_20250626.json  executive_summary_2008_20250627.json  executive_summary_2009_20250626.json  executive_summary_2009_20250627.json  executive_summary_2010_20250626.json  executive_summary_2010_20250627.json  executive_summary_2011_20250626.json  executive_summary_2011_20250627.json  executive_summary_2012_20250626.json  executive_summary_2012_20250627.json  executive_summary_2013_20250626.json  executive_summary_2013_20250627.json  executive_summary_2014_20250626.json  executive_summary_2014_20250627.json  executive_summary_2015_20250626.json  executive_summary_2015_20250627.json  executive_summary_2016_20250626.json  executive_summary_2016_20250627.json  executive_summary_2017_20250626.json  executive_summary_2017_20250627.json  executive_summary_2018_20250626.json  executive_summary_2018_20250627.json  executive_summary_2019_20250626.json  (+16 more)
src/: __init__.py  config.py  eda.py  features.py  financial_metrics.py  ingest.py  modeling.py  preprocess.py  (+1 more)
(+57 files in other folders)
